--- a/404.html
+++ b/404.html
@@ -105,6 +105,26 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://FallingKid.github.io/categories/" title="categories">
+                    <span>categories</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://FallingKid.github.io/tags/" title="tags">
+                    <span>tags</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://FallingKid.github.io/archive/" title="archive">
+                    <span>archive</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://FallingKid.github.io/post/" title="post">
+                    <span>post</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
