--- a/index.html
+++ b/index.html
@@ -121,23 +121,23 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://FallingKid.github.io/categories/" title="categories">
-                    <span>categories</span>
+                <a href="https://FallingKid.github.io/categories/" title="Categories">
+                    <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="https://FallingKid.github.io/tags/" title="tags">
-                    <span>tags</span>
+                <a href="https://FallingKid.github.io/tags/" title="Tags">
+                    <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://FallingKid.github.io/archive/" title="archive">
-                    <span>archive</span>
+                <a href="https://FallingKid.github.io/archives/" title="Archives">
+                    <span>Archives</span>
                 </a>
             </li>
             <li>
-                <a href="https://FallingKid.github.io/post/" title="post">
-                    <span>post</span>
+                <a href="https://FallingKid.github.io/post/" title="Post">
+                    <span>Post</span>
                 </a>
             </li>
         </ul>
